# sovereign-upgraded

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SETUP.md  docker-compose.yml  setup.ps1
config/: sovereign.toml.example
docs/: ARCHITECTURE.md
scripts/: benchmark.sh  install.sh  start.sh
src/: main.rs
src/agents/: code.rs  finance.rs  income.rs  learning.rs  mod.rs  security.rs  telegram.rs  upgrade.rs
src/brain/: client.rs  gemini.rs  mod.rs  swarm.rs
src/dream/: dream_engine.rs  mod.rs
src/memory/: graph.rs  memdir.rs  mod.rs  preferences.rs
src/ollama/: client.rs  mod.rs
src/tick/: mod.rs  phantom_tick.rs
src/tools/: bash.rs  file.rs  mod.rs  skills.rs  web.rs
src/web/: mod.rs
web/: index.html
