[package]
name = "sovereign"
version = "0.1.0"
edition = "2021"
authors = ["SOVEREIGN — Your Autonomous AI OS"]
description = "Personal autonomous AI operating system for Raspberry Pi 5"

[[bin]]
name = "sovereign"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10"

# HTTP client (for Ollama, Qdrant APIs)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system
walkdir = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# CLI args
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Markdown (for memory files)
pulldown-cmark = "0.9"

# Web server (for dashboard)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
shellexpand = "3.1.2"
urlencoding = "2.1.3"
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
